--- a/boot/fdt/dts/trimslice.dts
+++ b/boot/fdt/dts/trimslice.dts
@@ -47,88 +47,76 @@
 	};
 
 
-	SOC: tegra20@50040000 {
+	SOC: tegra20@0 {
 		#address-cells = <1>;
 		#size-cells = <1>;
 		compatible = "simple-bus";
-		ranges = <0 0x50040000 0x00004000>;	/* 16K at 0x50000000 */
+		ranges;
 		bus-frequency = <0>;
 
-		GIC: interrupt-controller@1000 {
+		GIC: interrupt-controller@50041000 {
 			compatible = "arm,gic";
 			interrupt-controller;
 			#address-cells = <0>;
 			#interrupt-cells = <1>;
-			reg =	< 0x1000 0x1000 >,	/* Distributor Registers */
-				< 0x0100 0x0100 >;	/* CPU Interface Registers */
+			reg =	< 0x50041000 0x1000 >,	/* Distributor Registers */
+				< 0x50040100 0x0100 >;	/* CPU Interface Registers */
 		};
-	};
 
-	ppsb@60000000 {
-		#address-cells = <1>;
-		#size-cells = <1>;
-		compatible = "simple-bus";
-		ranges = <0 0x60000000 0x00200000>;	/* 2M at 0x60000000 */
-		bus-frequency = <0>;
-
-		tmr1@5000 {
+		tmr1@60005000 {
 			compatible = "nvidia,tegra2-timer";
-			reg = <0x5000 0x8>;
+			reg = <0x60005000 0x8>;
 			interrupts = < 32 >;
 			interrupt-parent = <&GIC>;
 		};
-		tmr2@5008 {
+
+		tmr2@60005008 {
 			compatible = "nvidia,tegra2-timer";
-			reg = <0x5008 0x8>;
+			reg = <0x60005008 0x8>;
 			interrupts = < 33 >;
 			interrupt-parent = <&GIC>;
 		};
-		tmrus@5010 {
+
+		tmrus@60005010 {
 			compatible = "nvidia,tegra2-timestamp";
-			reg = <0x5010 0x8>;
+			reg = <0x60005010 0x8>;
 		};
-		tmr3@5050 {
+
+		tmr3@60005050 {
 			compatible = "nvidia,tegra2-timer";
-			reg = <0x5050 0x8>;
+			reg = <0x60005050 0x8>;
 			interrupts = < 73 >;
 			interrupt-parent = <&GIC>;
 		};
-		tmr4@5058 {
+
+		tmr4@60005058 {
 			compatible = "nvidia,tegra2-timer";
-			reg = <0x5058 0x8>;
+			reg = <0x60005058 0x8>;
 			interrupts = < 74 >;
 			interrupt-parent = <&GIC>;
 		};
-	};
 
-	apb@70000000 {
-		#address-cells = <1>;
-		#size-cells = <1>;
-		compatible = "simple-bus";
-		ranges = <0 0x70000000 0x00080000>;	/* 512K at 0x70000000 */
-		bus-frequency = <0>;
-
-		serial0: serial@6000 {
+		serial0: serial@70006000 {
 			compatible = "ns16550";
-			reg = <0x6000 0x40>;
+			reg = <0x70006000 0x40>;
 			reg-shift = <2>;
 			interrupts = < 68 >;
 			interrupt-parent = <&GIC>;
 			clock-frequency = < 215654400 >;
 		};
 
-		serial1: serial@6040 {
+		serial1: serial@70006040 {
 			compatible = "ns16550";
-			reg = <0x6040 0x40>;
+			reg = <0x70006040 0x40>;
 			reg-shift = <2>;
 			interrupts = < 69 >;
 			interrupt-parent = <&GIC>;
 			clock-frequency = < 215654400 >;
 		};
 
-		serial2: serial@6200 {
+		serial2: serial@70006200 {
 			compatible = "ns16550";
-			reg = <0x6200 0x100>;
+			reg = <0x70006200 0x100>;
 			reg-shift = <2>;
 			interrupts = < 78 >;
 			interrupt-parent = <&GIC>;
