--- a/boot/fdt/dts/trimslice.dts
+++ b/boot/fdt/dts/trimslice.dts
@@ -62,6 +62,16 @@
 			reg =	< 0x50041000 0x1000 >,	/* Distributor Registers */
 				< 0x50040100 0x0100 >;	/* CPU Interface Registers */
 		};
+		mp_tmr@50040200 {
+			compatible = "arm,mpcore-timers";
+			clock-frequency = < 50040200 >;
+			#address-cells = <1>;
+			#size-cells = <0>;
+			reg =   < 0x50040200 0x100 >, /* Global Timer Registers */
+				< 0x50040600 0x100 >; /* Private Timer Registers */
+			interrupts = < 27 29 >;
+			interrupt-parent = < &GIC >;
+		};
 
 		tmr1@60005000 {
 			compatible = "nvidia,tegra2-timer";
