Add slightly modified (FDT support added) OMAP GPIO driver by Ben Gray
Submitted by:	Ben Gray <ben.r.gray@gmail.com>


git-svn-id: svn://svn.freebsd.org/base/projects/armv6/sys@231232 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f

--- a/boot/fdt/dts/pandaboard.dts
+++ b/boot/fdt/dts/pandaboard.dts
@@ -109,6 +109,19 @@
 				0x4a008000 0x8000>;
 		};
 
+		GPIO: gpio {
+			#gpio-cells = <3>;
+			compatible = "ti,omap_gpio";
+			gpio-controller;
+			reg =<	0x4a310000 0x1000
+				0x48055000 0x1000
+				0x48057000 0x1000
+				0x48059000 0x1000
+				0x4805b000 0x1000
+				0x4805d000 0x1000>;
+			interrupts = <61 62 63 64 65 66>;
+			interrupt-parent = <&GIC>;
+		};
 	};
 
 	chosen {
