--- a/boot/fdt/dts/pandaboard.dts
+++ b/boot/fdt/dts/pandaboard.dts
@@ -122,6 +122,29 @@
 			interrupts = <61 62 63 64 65 66>;
 			interrupt-parent = <&GIC>;
 		};
+
+		ehci {
+			compatible = "ti,usb-ehci", "usb-ehci";
+			/* 
+			 * USB port PHY configuration is a tuple: <mode, reset, gpio_pin>
+			 * mode is one of the following values:
+			 *   0 - unknown
+			 *   1 - PHY
+			 *   2 - TLL
+			 *   3 - HSIC
+			 *
+			 * reset indicates (if non-zero) if port reset is required 
+			 * gpio_pin - GPIO pin that is used to perform reset
+			 */
+			phy-config = <  1 0 0
+					0 0 0
+					0 0 0>;
+			reg = < 0x4a064c00 0x100	/* EHCI regs */
+				0x4a064000 0x700	/* UHH regs */
+				0x4a062000 0x1000>;	/* TLL regs */
+			interrupts = <109>;
+			interrupt-parent = <&GIC>;
+		};
 	};
 
 	chosen {
