--- a/boot/fdt/dts/pandaboard.dts
+++ b/boot/fdt/dts/pandaboard.dts
@@ -147,7 +147,7 @@
 		};
 
 		I2C1: i2c@x48070000 {
-			compatible = "ti,omap_i2c";
+			compatible = "ti,i2c";
 			reg =<	0x48070000 0x100 >;
 			interrupts = <88>;
 			interrupt-parent = <&GIC>;
