Add FDT node for OMAP sDMA controller to pandaboard DTS
git-svn-id: svn://svn.freebsd.org/base/projects/armv6/sys@231926 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f

--- a/boot/fdt/dts/pandaboard.dts
+++ b/boot/fdt/dts/pandaboard.dts
@@ -153,6 +153,13 @@
 			interrupt-parent = <&GIC>;
 
 		};
+
+		sdma@x48070000 {
+			compatible = "ti,sdma";
+			reg =<	0x4A056000 0x1000 >;
+			interrupts = <44 45 46 47>;
+			interrupt-parent = <&GIC>;
+		};
 	};
 
 	chosen {
