--- a/boot/fdt/dts/pandaboard.dts
+++ b/boot/fdt/dts/pandaboard.dts
@@ -151,7 +151,7 @@
 			reg =<	0x48070000 0x100 >;
 			interrupts = <88>;
 			interrupt-parent = <&GIC>;
-
+			i2c-device-id = <1>;
 		};
 
 		sdma@x48070000 {
