Add MMC entry to FDT
git-svn-id: svn://svn.freebsd.org/base/projects/armv6/sys@231957 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f

--- a/boot/fdt/dts/pandaboard.dts
+++ b/boot/fdt/dts/pandaboard.dts
@@ -160,6 +160,14 @@
 			interrupts = <44 45 46 47>;
 			interrupt-parent = <&GIC>;
 		};
+
+		mmc@x4809C000 {
+			compatible = "ti,omap_mmc";
+			reg =<0x4809C000 0x1000 >;
+			interrupts = <115>;
+			interrupt-parent = <&GIC>;
+		};
+
 	};
 
 	chosen {
