--- a/boot/fdt/dts/beaglebone.dts
+++ b/boot/fdt/dts/beaglebone.dts
@@ -138,6 +138,23 @@
 			clock-frequency = < 48000000 >; /* FIXME */
 		};
 
+		edma3@49000000 {
+			compatible = "ti,edma";
+			reg =<	0x49000000 0x100000	/* Channel Controller Regs */
+				0x49800000 0x100000	/* Transfer Controller 0 Regs */
+				0x49900000 0x100000	/* Transfer Controller 1 Regs */
+				0x49a00000 0x100000 >;	/* Transfer Controller 2 Regs */
+			interrupts = <12 13 14>;
+			interrupt-parent = <&AINTC>;
+		};
+
+		mmchs0@4809C000 {
+			compatible = "ti,mmchs";
+			reg =<0x48060000 0x1000 >;
+			interrupts = <64>;
+			interrupt-parent = <&AINTC>;
+		};
+
 		enet0: ethernet@4A100000 {
 			#address-cells = <1>;
 			#size-cells = <1>;
